Split exam stats and text
git-svn-id: file:///home/svn/DVA2006@7158 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a